force-app/main/default/objects/EventOrganizer__c/EventOrganizer__c.object-meta.xml
<CustomObject>
    <description>event organizers description</description>
    <label>Event Organizer</label>
    <nameField>
        <label>Event Organizer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Organizers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>