force-app/main/default/objects/EventOrganizer__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <type>Lookup</type>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Event Organizers</relationshipLabel>
    <relationshipName>Event_Organizers</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address</label>
</CustomField>