force-app/main/default/objects/EventOrganizer__c/fields/Alternative_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Email__c</fullName>
    <type>Email</type>
    <label>Alternative Email</label>
</CustomField>