force-app/main/default/objects/EventOrganizer__c/fields/Alternative_Phone__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Phone__c</fullName>
    <type>Phone</type>
    <label>Alternative Phone</label>
</CustomField>