force-app/main/default/objects/EventOrganizer__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <type>Email</type>
    <label>Email</label>
</CustomField>