force-app/main/default/objects/EventOrganizer__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <type>Phone</type>
    <label>Phone</label>
</CustomField>